Added some constraints